# Drautos

./: .clang-format  .gitignore  CMakeLists.txt  Drautos.nuspec  README.md  vcpkg.json
.github/workflows/: main.yml
docs/: Exceptions.md  Logging.md
src/: CMakeLists.txt  Configuration.h  Drautos.h  Host.h  main.cpp
src/Hooking/: ExternFunctionHook.h  FunctionHook.h  FunctionHookManager.h  IFunctionHook.h
src/Hooking/Hooks/: Patch1Hook.h  Patch1InitialHook.h  SnapshotLimitHook.h  SteamRestartHook.h  UnlockDlcHook.h  UnmaskCompressedHook.h
src/Logging/: Exception.h  Logging.h
src/Patching/: IPatch.h  MemorySignature.h  PatchManager.h
src/Patching/Patches/: AnselPatch.h  TwitchPrimePatch.h
src/Replica/SQEX/Luminous/: AssetManager.h  Core.h
src/Replica/SQEX/Luminous/AssetManager/: LmAssetID.h  LmFileList.h
tests/: CMakeLists.txt
tests/Replica/SQEX/Luminous/AssetManager/: LmAssetIDTest.cpp
